noinst_PROGRAMS = uade_convert
uade_convertdir = $(prefix)/bin
uade_convert_SOURCES = \
    big_endian.h \
    converter_main.cc \
    converter.h \
    converter.cc \
    common_med.h \
    common_med.cc \
    converter_med4.cc \
    ../3rdparty/macos_endian.h \
    ../3rdparty/SimpleBinStream.h \
    ../3rdparty/proplayer.h
